use java 6 features to open url in browser
git-svn-id: http://josm.openstreetmap.de/svn/trunk@3524 0c6e7542-c601-0410-84e7-c038aed88b3b